--- a/src/server/.env
+++ b/src/server/.env
@@ -2,6 +2,6 @@ DB_URL=mongodb+srv://iamnishanthbalaji:Pt8FSrKGSArcXwbD@cluster0.wtb48.mongodb.n
 
 # CLIENT_URL='https://your-production-url-placeholder.com/';
 
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://www.freshfromfarm.onrender.com/
 
 # NODE_ENV=production
