--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "@types/react-dom": "^18.0.10",
     "concurrently": "^9.1.2",
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
