--- a/src/server/.env
+++ b/src/server/.env
@@ -4,5 +4,7 @@ DB_URL=mongodb+srv://iamnishanthbalaji:Pt8FSrKGSArcXwbD@cluster0.wtb48.mongodb.n
 
 CLIENT_URL=https://www.freshfromfarm.onrender.com/
 
+REACT_APP_API_URL=https://freshfromfarm.onrender.com/
+
 # NODE_ENV=production
 
