--- a/src/server/.env
+++ b/src/server/.env
@@ -1,4 +1,4 @@
-DB_URL=mongodb+srv://iamnishanthbalaji:Pt8FSrKGSArcXwbD@cluster0.wtb48.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0;
+DB_URL=mongodb+srv://iamnishanthbalaji:Pt8FSrKGSArcXwbD@cluster0.wtb48.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # CLIENT_URL='https://your-production-url-placeholder.com/';
 
